--- a/Trilha Discovery/src/views/create-orphanage.hbs
+++ b/Trilha Discovery/src/views/create-orphanage.hbs
@@ -15,15 +15,15 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 
-    <link rel="icon" href="./public//images/logo-icon.png" />
+    <link rel="icon" href="//images/logo-icon.png" />
 
-    <link rel="stylesheet" href="./public/css/main.css" />
-    <link rel="stylesheet" href="./public/css/animations.css" />
-    <link rel="stylesheet" href="./public/css/sidebar.css" />
-    <link rel="stylesheet" href="./public/css/map.css" />
-    <link rel="stylesheet" href="./public/css/form.css" />
-    <link rel="stylesheet" href="./public/css/buttons.css" />
-    <link rel="stylesheet" href="./public/css/page-create-orphanage.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
+    <link rel="stylesheet" href="/css/map.css" />
+    <link rel="stylesheet" href="/css/form.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
+    <link rel="stylesheet" href="/css/page-create-orphanage.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
 
@@ -33,11 +33,11 @@
 <body>
     <div id="page-create-orphanage">
         <aside class="animate-right sidebar">
-            <img src="./public/images/map-marker.svg" alt="Happy" />
+            <img src="/images/map-marker.svg" alt="Happy" />
 
             <footer>
                 <button onclick="history.back()">
-                    <img src="./public/images/arrow-back.svg " alt="Happy" />
+                    <img src="/images/arrow-back.svg " alt="Happy" />
                 </button>
             </footer>
         </aside>
@@ -80,12 +80,12 @@
                             <div class="new-upload">
                                 <input name="images" placeholder="Cole o link da foto aqui" required />
                                 <span onclick="deleteField(event)">
-                                    <img src="./public/images/remove-file.svg" alt="Remover Foto">
+                                    <img src="/images/remove-file.svg" alt="Remover Foto">
                                 </span>
                             </div>
                         </div>
                         <button type="button" onclick="addPhotoField()">
-                            <img src="./public/images/add-file.svg" alt="Nova images" />
+                            <img src="/images/add-file.svg" alt="Nova images" />
                         </button>
                     </div>
                 </fieldset>
@@ -121,7 +121,7 @@
             </form>
         </main>
     </div>
-    <script src="./public/scripts/page-create-orphanage.js"></script>
+    <script src="/scripts/page-create-orphanage.js"></script>
 </body>
 
 </html>
