--- a/Trilha Discovery/src/views/orphanage.hbs
+++ b/Trilha Discovery/src/views/orphanage.hbs
@@ -15,14 +15,14 @@
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
 
-    <link rel="icon" href="./public//images/logo-icon.png" />
+    <link rel="icon" href="//images/logo-icon.png" />
 
-    <link rel="stylesheet" href="./public/css/main.css" />
-    <link rel="stylesheet" href="./public/css/animations.css" />
-    <link rel="stylesheet" href="./public/css/sidebar.css" />
-    <link rel="stylesheet" href="./public/css/map.css" />
-    <link rel="stylesheet" href="./public/css/buttons.css" />
-    <link rel="stylesheet" href="./public/css/page-orphanage.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/animations.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
+    <link rel="stylesheet" href="/css/map.css" />
+    <link rel="stylesheet" href="/css/buttons.css" />
+    <link rel="stylesheet" href="/css/page-orphanage.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
@@ -32,17 +32,17 @@
 <body>
     <div id="page-orphanage">
         <aside class="animate-right sidebar">
-            <img src="./public/images/map-marker.svg" alt="Happy" />
+            <img src="/images/map-marker.svg" alt="Happy" />
 
             <footer>
                 <button onclick="history.back()">
-                    <img src="./public/images/arrow-back.svg " alt="Happy" />
+                    <img src="/images/arrow-back.svg " alt="Happy" />
                 </button>
             </footer>
         </aside>
         <main class="animate-appear with-sidebar">
             <div class="orphanage-details">
-                <img src="./public/images/home.jpg" alt="Lar das Meninas" />
+                <img src="/images/home.jpg" alt="Lar das Meninas" />
 
                 <div class="images">
                     <button onclick="selectImage(event)" class='active' type="button">
@@ -93,17 +93,17 @@
 
                     <div class="open-details">
                         <div class="hour">
-                            <img src="./public/images/clock.svg" alt="Horários" />
+                            <img src="/images/clock.svg" alt="Horários" />
                             Horário de visitas Das 18h até 8h
                         </div>
                         <div class="open-on-weekends">
-                            <img src="./public/images/info.svg" alt="Informações" />
+                            <img src="/images/info.svg" alt="Informações" />
                             Atendemos fim de semana
                         </div>
                     </div>
 
                     <button class="primary-button" type="button">
-                        <img src="./public/images/whatsapp.svg" alt="Chamar no whatsapp" />
+                        <img src="/images/whatsapp.svg" alt="Chamar no whatsapp" />
                         Entrar em contato
                     </button>
 
@@ -111,7 +111,7 @@
             </div>
         </main>
     </div>
-    <script src="./public/scripts/page-orphanage.js"></script>
+    <script src="/scripts/page-orphanage.js"></script>
 </body>
 
 </html>
